# medici

./: .travis.yml  Cargo.toml  LICENSE  README.md  aliases.js  bors.toml  clippy.toml  index.html  search-index.js
action_derive/action_macros/: Cargo.toml
action_derive/action_macros/src/: lib.rs
archived/cc_idents/: Cargo.toml
archived/cc_idents/src/: lib.rs
game_system/: Cargo.toml  all.html  card_impl.m.html  index.html  macro.card_impl.html  sidebar-items.js
game_system/card/: Card.t.html  GAME_CARD_ID.v.html  PLAYER_CARD_ID.v.html  constant.GAME_CARD_ID.html  constant.PLAYER_CARD_ID.html  index.html  sidebar-items.js  type.Card.html
game_system/entity/: constant.GAME_E_ID.html  index.html  sidebar-items.js  type.Entity.html
game_system/prelude/: CardTrait.t.html  EntityId.t.html  EntityTrait.t.html  MachineError.t.html  StackStorageCompliance.t.html  constant.GAME_E_ID.html  enum.ErrorKind.html  fn.pack_transaction.html  fn.unpack_transaction.html  index.html  pack_transaction.v.html  sidebar-items.js  struct.CardId.html  struct.MachineError.html  trait.ArrayStorageCompliance.html  trait.CardBuilder.html  trait.CardTrait.html  trait.EntityBuilder.html  trait.EntityTrait.html  trait.FrontendErrorExt.html  trait.HydratedErrorExt.html  trait.Identifiable.html  trait.IndexedStorageCompliance.html  trait.PullupInto.html  trait.PushdownInto.html  trait.ServiceCompliance.html  trait.StackStorageCompliance.html  trait.TransitionInto.html  type.EntityId.html
game_system/prelude/error/: enum.ErrorKind.html  index.html  sidebar-items.js  struct.MachineError.html  trait.FrontendErrorExt.html  trait.HydratedErrorExt.html
game_system/prelude/function/: ArrayStorageCompliance.t.html  CardId.t.html  EffectState.t.html  IndexedStorageCompliance.t.html  TriggerState.t.html  index.html  struct.CardId.html  trait.ArrayStorageCompliance.html  trait.Card.html  trait.CardBuilder.html  trait.EffectState.html  trait.Entity.html  trait.EntityBuilder.html  trait.Identifiable.html  trait.IndexedStorageCompliance.html  trait.ServiceCompliance.html  trait.StackStorageCompliance.html  trait.State.html  trait.StateContainer.html  trait.TriggerState.html  type.EntityId.html
game_system/prototype/: Game.t.html  Player.t.html  enum.ProtoItem.html  index.html  sidebar-items.js  type.Game.html  type.Player.html
game_system/prototype/definition/: enum.ProtoItem.html  type.Game.html  type.Player.html
game_system/re_export/: PushdownFrom.t.html  index.html  sidebar-items.js  trait.PullupFrom.html  trait.PushdownFrom.html  trait.TransitionFrom.html
game_system/re_export/function/: CardBuilder.t.html  EntityBuilder.t.html  ServiceCompliance.t.html  index.html  struct.CardId.html  trait.ArrayStorageCompliance.html  trait.Card.html  trait.CardBuilder.html  trait.EffectState.html  trait.Entity.html  trait.EntityBuilder.html  trait.Identifiable.html  trait.IndexedStorageCompliance.html  trait.ServiceCompliance.html  trait.StackStorageCompliance.html  trait.State.html  trait.StateContainer.html  trait.TriggerState.html  type.EntityId.html
game_system/re_export/marker/: ProtoEnumerator.t.html  TimingEnumerator.t.html  TopLevel.t.html  TransactionContainer.t.html  Triggerable.t.html  index.html  trait.Actionable.html  trait.ProtoEnumerator.html  trait.Prototype.html  trait.Service.html  trait.Timing.html  trait.TimingEnumerator.html  trait.TopLevel.html  (+5 more)
game_system/runtime/: exec_triggers.v.html  fn.exec_triggers.html  index.html  sidebar-items.js
game_system/setup/: index.html  sidebar-items.js
game_system/src/: card.rs  entity.rs  lib.rs  runtime.rs  setup.rs  tag.rs  zone.rs
game_system/state_machine/: index.html  sidebar-items.js
game_system/tag/: EntityTags.t.html  enum.EntityTags.html  index.html  sidebar-items.js
game_system/tests/: card_test.rs  game_config_test.rs
medici_core/: Cargo.toml  all.html  ctxt.m.html  index.html  macro.build_exec_triggers_checked!.html  macro.build_exec_triggers_checked.html  macro.ct!.html  macro.ct.html  macro.ctxt.html  macro.hydrate!.html  macro.hydrate.html  sidebar-items.js
medici_core/ctstack/: AnyStack.t.html  CTStack.t.html  EmptyStack.t.html  ZeroSizedType.t.html  index.html  sidebar-items.js  trait.CTStack.html  type.AnyStack.html  type.EmptyStack.html  type.ZeroSizedType.html
medici_core/error/: FrontendErrorExt.t.html  HydratedErrorExt.t.html  enum.ErrorKind.html  index.html  struct.MachineError.html  trait.FrontendErrorExt.html  trait.HydratedErrorExt.html
medici_core/function/: Card.t.html  StateContainer.t.html  index.html  sidebar-items.js  struct.CardId.html  trait.ArrayStorageCompliance.html  trait.Card.html  trait.CardBuilder.html  trait.EffectState.html  trait.Entity.html  trait.EntityBuilder.html  trait.Identifiable.html  trait.IndexedStorageCompliance.html  trait.ServiceCompliance.html  trait.StackStorageCompliance.html  trait.State.html  trait.StateContainer.html  trait.TriggerState.html  type.EntityId.html
medici_core/macros/: index.html
medici_core/marker/: Actionable.t.html  Timing.t.html  TriggerEnumerator.t.html  index.html  sidebar-items.js  trait.Actionable.html  trait.ProtoEnumerator.html  trait.Prototype.html  trait.Service.html  trait.Timing.html  trait.TimingEnumerator.html  trait.TopLevel.html  trait.Transaction.html  trait.TransactionContainer.html  trait.TriggerEnumerator.html  trait.Triggerable.html  trait.Waitable.html
medici_core/prefab/: index.html  sidebar-items.js
medici_core/service/: index.html  sidebar-items.js
medici_core/src/: behaviour.rs  behaviours.rs  components.rs  ctmut.rs  ctstack.rs  error.rs  function.rs  lib.rs  macros.rs  marker.rs  stm.rs  transaction.rs  workaround.rs  wrappers.rs
medici_core/stm/: index.html  sidebar-items.js
medici_core/storage/: index.html  sidebar-items.js
medici_core/transaction/: fn.pack_transaction.html  fn.unpack_transaction.html  index.html  sidebar-items.js  unpack_transaction.v.html
medici_derive/medici_macros/: Cargo.toml
medici_derive/medici_traits/: Cargo.toml
value_from_type_derive/value_from_type_macros/: Cargo.toml  README.md
(+553 files in other folders)
