[package]
name = "medici"
version = "0.1.0"
authors = ["Bert Proesmans <bproesmans@hotmail.com>"]

[workspace]
# Only exclude the sub-root workspace declarations here. This method prevents 
# Cargo from complaining about multiple defined root workspaces.
exclude = [
	"medici_derive",
	"value_from_type_derive",
]

[dependencies]
medici_macros = {path = "medici_derive/medici_macros"}
medici_traits = {path = "medici_derive/medici_traits"}
value_from_type_macros = {path= "value_from_type_derive/value_from_type_macros"}
value_from_type_traits = {path= "value_from_type_derive/value_from_type_traits"}
