[package]
name = "game_system"
version = "0.1.0"
authors = ["Bert Proesmans <bproesmans@hotmail.com>"]

[dependencies]
medici_core = {path = "../medici_core"}
value_from_type_macros = "1.0.3"
value_from_type_traits = "1.0.2"

failure = "0.1.1"
failure_derive = "0.1.1"
maplit = "1.0.1"
lazy_static = "1.0.0"

# [patch.crates-io]
# value_from_type_macros = { path = "D:\\Git\\value-from-type-derive\\value_from_type_macros" }

[dev-dependencies]
# clippy = { version = "*" }
