[package]
name = "action_macros"
version = "0.1.0"
authors = ["Bert Proesmans <bproesmans@hotmail.com>"]

[lib]
proc-macro = true

[dependencies]
syn = {version = "0.12", features = ['derive', 'parsing', 'printing', 'extra-traits'] }
quote = "0.4"
proc-macro2 = { version = "0.2", features = ["nightly"] }
