[package]
name = "medici_macros"
version = "0.1.0"
authors = ["Bert Proesmans <bproesmans@hotmail.com>"]

[lib]
proc-macro = true

[dependencies]
syn = {version = "0.12", features = ['full', 'extra-traits'] }
quote = "0.4"
proc-macro2 = { version = "0.2", features = ["nightly"] }
interpolate_idents = "0.2.1"
