[package]
name = "medici_traits"
version = "0.1.0"
authors = ["Bert Proesmans <bproesmans@hotmail.com>"]

[dependencies]
value_from_type_macros = "1.0.1"
value_from_type_traits = "1.0.1"

# DO NOT INCLUDE medici_macros BECAUSE THAT CREAYES A CIRCULAR INCLUDE
# medici_macros = {path = "../medici_macros"}
