[package]
name = "value_from_type_macros"
version = "0.1.0"
authors = ["Bert Proesmans <bproesmans@hotmail.com>"]

[lib]
proc-macro = true

[dependencies]
syn = {version = "0.12", features = ['full'] }
quote = "0.4"
proc-macro2 = { version = "0.2", features = ["nightly"] }
# Easy case conversion
heck = "0.3.0"
