[package]
name = "value_from_type_macros"
version = "1.0.0"
authors = ["Bert Proesmans <bproesmans@hotmail.com>"]
description = "Implement enum (and cast methods) for a set of struct types"
license = "MIT"
documentation = "https://docs.rs/value_from_type_macros"

[lib]
proc-macro = true

[dependencies]
syn = {version = "0.12", features = ['full'] }
quote = "0.4"
proc-macro2 = { version = "0.2", features = ["nightly"] }
# Easy case conversion
heck = "0.3.0"

[dev-dependencies]
value_from_type_traits = "1.0.0"
